# dxgb_bench

./: .gitignore  LICENSE  README.md  README.org  XGBoost.yaml  dxgb-bench  dxgb-to-csv  launch.py  main.py  pixi.toml  pyproject.toml  requirements.txt  setup.py  to_csv.py
.github/workflows/: main.yml
conda/: xgboost_aarch_dev.yml
configs/: ddgen.json  dsgen.json
dev/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.nvbandwidth  README.md  build_conda_env.sh  build_dxgb_bench.sh  build_image.py  build_image.sh  build_xgboost.sh  clone_xgboost.sh  install_cgmemtime.sh  install_ncu.sh  install_nsight.sh  install_nsys.sh  install_xgboost.sh  test-cuda-alloc.cc  unique.patch  xgboost_aarch_dev.yml  xgboost_cpu_dev.yml  xgboost_dev.yml
dxgb_bench/: CMakeLists.txt  __init__.py  algorihm.py  dataiter.py  dxgb_bench.py  dxgb_bench_auto.py  dxgb_dask_bench.py  dxgb_dist_bench.py  dxgb_dist_impl.py  dxgb_ext_bench.py  dxgb_to_csv.py  external_mem.py  gen.cc  gen.cu  gen.hpp  strip.py  utils.py
dxgb_bench/datasets/: __init__.py  airline.py  covtype.py  dataset.py  epsilon.py  generated.py  higgs.py  mortgage.py  taxi.py  url.py  year.py
dxgb_bench/dsk/: __init__.py  algorithm.py
dxgb_bench/testing/: __init__.py
gbm_cat_bench/: .gitignore  run_cat_bench  setup.py
gbm_cat_bench/cat_bench/: __init__.py  algorithms.py  datasets.py  utils.py
gbm_cat_bench/cat_bench/testing/: test_basic.py
nvb/: Dockerfile  README.md  nvbandwidth.yml
scripts/: bench_sparse.sh  c2cinfo.py
tests/: test_bench.py  test_datagen.sh  test_dataiter.py  test_datasets.py  test_dist.py  test_extmem.py  test_strip.py  test_utils.py
tests/dsk/: test_datasets.py  test_dsk_datasets.py
