[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dxgb-bench"
version = "0.0.0"
description="Benchmarking scripts for XGBoost."
readme = { file = "README.org", content-type = "text/markdown" }

dependencies = [
    "tqdm"
]

[project.scripts]
dxgb-ext-bench = "dxgb_bench.dxgb_ext_bench:cli_main"
dxgb-to-csv = "dxgb_bench.dxgb_to_csv:cli_main"
dxgb-dask-bench = "dxgb_bench.dxgb_dask_bench:cli_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "silent"

[tool.isort]
profile = "black"