[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dxgb-bench"
dynamic = ["version"]
description="Benchmarking scripts for XGBoost."
readme = { file = "README.org", content-type = "text/markdown" }

dependencies = [
    "tqdm"
]

[project.scripts]
dxgb-ext-bench = "dxgb_bench.dxgb_ext_bench:cli_main"
dxgb-bench = "dxgb_bench.dxgb_bench:cli_main"
dxgb-dist-bench = "dxgb_bench.dxgb_dist_bench:cli_main"
_dxgb-dist-impl = "dxgb_bench.dxgb_dist_impl:cli_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "silent"

[tool.isort]
profile = "black"